updated the look

--- a/index.css
+++ b/index.css
@@ -10,6 +10,10 @@
   color: var(--primary-color);
 }
 
+.monofont {
+  font-family: monospace;
+}
+
 hr {
   color: var(--secondary-color);
 }
@@ -1313,10 +1317,8 @@ header {
   pointer-events: none;
 }
 
-.arch-logo {
-  position: relative;
-  left: -13px;
-  top: -10px;
+.outline {
+  filter: drop-shadow(2px 0px 0 #fff) drop-shadow(-2px 0px 0 #fff) drop-shadow(0px 2px 0 #fff) drop-shadow(0px -2px 0 #fff);
 }
 
 .stack-layer {
