--- a/index.scss
+++ b/index.scss
@@ -19,6 +19,10 @@
   // other
 }
 
+.monofont {
+  font-family: monospace;
+}
+
 hr {
   // color: #fcf7f75e;
   color: var(--secondary-color);
@@ -196,14 +200,12 @@ header {
   pointer-events: none;
 }
 
-.arch-logo {
-  position: relative;
-  left: -13px;
-  top: -10px;
+.outline {
+  filter: drop-shadow(2px 0px 0 #fff) 
+          drop-shadow(-2px 0px 0 #fff)
+          drop-shadow(0px 2px 0 #fff)
+          drop-shadow(0px -2px 0 #fff);
 }
-// .neovim-logo {
-
-// }
 
 .stack-layer {
   position: absolute;
