--- a/index.css
+++ b/index.css
@@ -5,6 +5,12 @@
   --secondary-color: #ca93cf;
   --tertiary-color: #f5d7b8;
   --bg-color: #000;
+  --primary-color: #595b7d;
+  --secondary-color: #f0abab;
+  --tertiary-color: #fffcff;
+  --quad-color: #caaff564;
+  --bg-color: #e6e1f2;
+  --warn-color: #595b7dbf;
   font-family: "M PLUS Rounded 1C";
   text-rendering: optimizeLegibility;
   color: var(--primary-color);
@@ -53,9 +59,49 @@ header {
   top: 0;
   z-index: 999;
   color: #fff;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: var(--quad-color);
   -webkit-backdrop-filter: blur(6px);
           backdrop-filter: blur(6px);
+}
+
+.warning-bg {
+  transition: 0.5s;
+  background: var(--warn-color);
+  -webkit-backdrop-filter: blur(6px);
+          backdrop-filter: blur(6px);
+  top: 0;
+  position: fixed !important;
+  width: 100vw;
+  height: 100vh;
+  z-index: 9999;
+  overflow-y: hidden;
+}
+
+.warning-text {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  transition: 0.5s;
+  color: var(--bg-color);
+  width: 100vw;
+  height: 100vh;
+}
+
+body:hover .warning-bg {
+  transition: 0.5s;
+  color: transparent;
+  background: transparent;
+  -webkit-backdrop-filter: none;
+          backdrop-filter: none;
+  top: -100vh;
+}
+body:hover .warning-text {
+  transition: 0.5s;
+  color: transparent;
+  background: transparent;
+  -webkit-backdrop-filter: none;
+          backdrop-filter: none;
+  top: -100vh;
 }
 
 .center-horizontal {
@@ -92,7 +138,7 @@ header {
   overflow: hidden;
   left: auto;
   right: auto;
-  background-color: rgb(31, 12, 41);
+  background-color: var(--tertiary-color);
 }
 
 .button {
@@ -1315,8 +1361,8 @@ header {
 
 .static-logo {
   margin: 25px;
-  margin-top: 40px;
-  margin-bottom: 15px;
+  margin-top: auto;
+  margin-bottom: auto;
   width: 48px;
   height: auto;
   -webkit-user-select: none;
@@ -1326,7 +1372,7 @@ header {
 }
 
 .outline {
-  filter: drop-shadow(2px 0px 0 #fff) drop-shadow(-2px 0px 0 #fff) drop-shadow(0px 2px 0 #fff) drop-shadow(0px -2px 0 #fff);
+  filter: drop-shadow(2px 0px 0 var(--secondary-color)) drop-shadow(-2px 0px 0 var(--secondary-color)) drop-shadow(0px 2px 0 var(--secondary-color)) drop-shadow(0px -2px 0 var(--secondary-color));
 }
 
 .stack-layer {
@@ -1363,15 +1409,26 @@ header {
   }
 }
 .appear-left {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   transition: 1s;
   color: transparent;
   transform: translate(0px, 0px);
 }
 
 .appear-right {
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
   transition: 1s;
   color: transparent;
   transform: translate(0px, 0px);
+}
+
+.text-appear {
+  margin-top: 40px;
+  margin-top: 40px;
 }
 
 .text-appear:hover .appear-left {
