--- a/index.css
+++ b/index.css
@@ -63,6 +63,8 @@ header {
   width: 100vw;
   top: 0;
   z-index: 999;
+  min-height: 7rem;
+  align-content: center;
   color: #fff;
   background-color: var(--quad-color);
   -webkit-backdrop-filter: blur(6px);
